tests/ui/err-02.stderr
error[E0277]: the trait bound `Fatal: Fatality` is not satisfied
  --> tests/ui/err-02.rs:34:1
   |
34 | #[fatality]
   | ^^^^^^^^^^^ the trait `Fatality` is not implemented for `Fatal`
   |
   = help: the trait `Fatality` is implemented for `Kaboom`
   = note: this error originates in the attribute macro `fatality` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `?` couldn't convert the error to `Kaboom`
  --> tests/ui/err-02.rs:45:12
   |
44 | fn iffy() -> Result<(), Kaboom> {
   |              ------------------ expected `Kaboom` because of this
45 |     Err(Fatal)?
   |     ----------^ the trait `From<Fatal>` is not implemented for `Kaboom`
   |     |
   |     this can't be annotated with `?` because it has type `Result<_, Fatal>`
   |
note: `Kaboom` needs to implement `From<Fatal>`
  --> tests/ui/err-02.rs:35:1
   |
35 | enum Kaboom {
   | ^^^^^^^^^^^
note: alternatively, `Fatal` needs to implement `Into<Kaboom>`
  --> tests/ui/err-02.rs:22:1
   |
22 | struct Fatal;
   | ^^^^^^^^^^^^
   = note: the question mark operation (`?`) implicitly performs a conversion on the error value using the `From` trait

error[E0277]: `?` couldn't convert the error to `Kaboom`
  --> tests/ui/err-02.rs:49:11
   |
48 | fn bobo() -> Result<(), Kaboom> {
   |              ------------------ expected `Kaboom` because of this
49 |     Err(Bobo)?
   |     ---------^ the trait `From<Bobo>` is not implemented for `Kaboom`
   |     |
   |     this can't be annotated with `?` because it has type `Result<_, Bobo>`
   |
note: `Kaboom` needs to implement `From<Bobo>`
  --> tests/ui/err-02.rs:35:1
   |
35 | enum Kaboom {
   | ^^^^^^^^^^^
note: alternatively, `Bobo` needs to implement `Into<Kaboom>`
  --> tests/ui/err-02.rs:32:1
   |
32 | struct Bobo;
   | ^^^^^^^^^^^
   = note: the question mark operation (`?`) implicitly performs a conversion on the error value using the `From` trait
